PieChart and BarChart now perfectly scalable ;)

--- a/app/index.html
+++ b/app/index.html
@@ -64,7 +64,7 @@
 
 
 			// A PIE
-			var pie = new BarChart("#cont", [12,34,10,8,6], ["a","b","c","d","e"]);
+			var pie = new PieChart("#cont", [12,34,10,8,6], ["ammaccabana","bopodollo","cretinazzo","dindaro","ettortello"]);
 			pie.draw();
 
 
