--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
 
 		<div id="map"></div>
 		<div id="cont"></div>
+		<div id="cont2"></div>
 
 		<script src="graphics/PieChart.js"></script>
 		<script src="graphics/BarChart.js"></script>
@@ -65,6 +66,10 @@
 
 			// A PIE
 			var pie = new PieChart("#cont", [12,34,10,8,6], ["ammaccabana","bopodollo","cretinazzo","dindaro","ettortello"]);
+			pie.draw();
+
+						// A PIE
+			var pie = new BarChart("#cont2", [12,34,10,8,6], ["ammaccabana","bopodollo","cretinazzo","dindaro","ettortello"]);
 			pie.draw();
 
 
