--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <title>Map example</title>
         <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="app/data/database.js" charset="utf-8"></script>
         <script src="control.js" charset="utf-8"></script>
         <script src="ml.js" charset="utf-8"></script>
         <script src="app/graphics/BarChart.js" charset="utf-8"></script>
