Integration calendar in the control. Pratial implementation of pickAday controller

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <script src="control.js" charset="utf-8"></script>
         <script src="app/graphics/Map2.js" charset="utf-8"></script>
         <script src="app/graphics/BarChart.js" charset="utf-8"></script>
+        <script src="app/graphics/calendar.js" charset="utf-8"></script>
         <script src="app/graphics/PieChart.js" charset="utf-8"></script>
         <script src="app/graphics/LineChart.js" charset="utf-8"></script>
          <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
@@ -20,7 +21,6 @@
     <body>
         <div id= "mainCointainer" class = "flex-container">
         <div id="div1">
-            <div id="initialDiv"> </div>
         </div>
         <div id="div2">
             <div id="map"> </div>
