--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <div id= "mainCointainer" class = "flex-container">
         <div id="div1">
         </div>
+        <div id="map"> </div>
         <div id="div2">
             <div id="map"> </div>
         </div>
