--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
          <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
         <link rel="stylesheet" href="maincss.css" />
+        <link rel="stylesheet" href="app/graphics/slider.css" />
         <link rel="stylesheet" href="app/graphs.css" />
     </head>
     <body>
