--- a/index.html
+++ b/index.html
@@ -2,24 +2,24 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Map example</title>
+        <title>Bicycle Race</title>
         <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="app/data/database.js" charset="utf-8"></script>
-        <script src="app/data/ranger.js" charset="utf-8"></script>
+        <script src="app/data/Ranger.js" charset="utf-8"></script>
         <script src="app/data/databaseMock.js" charset="utf-8"></script>
         <script src="control.js" charset="utf-8"></script>
         <script src="app/graphics/Map2.js" charset="utf-8"></script>
         <script src="app/graphics/BarChart.js" charset="utf-8"></script>
         <script src="app/graphics/calendar.js" charset="utf-8"></script>
-        <script src="app/graphics/slider.js" charset="utf-8"></script>
+        <script src="app/graphics/Slider.js" charset="utf-8"></script>
         <script src="app/graphics/PieChart.js" charset="utf-8"></script>
         <script src="app/graphics/LineChart.js" charset="utf-8"></script>
         <script src="app/graphics/Stars.js" charset="utf-8"></script>
          <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
         <link rel="stylesheet" href="maincss.css" />
-        <link rel="stylesheet" href="app/graphics/slider.css" />
+        <link rel="stylesheet" href="app/graphics/Slider.css" />
         <link rel="stylesheet" href="app/graphs.css" />
     </head>
     <body>
