fixed bug on change hour, added options to listbox

--- a/iframe.html
+++ b/iframe.html
@@ -4,7 +4,7 @@
   <title></title>
 </head>
 <body>
-<iframe width = "8200" height = "2200" src="index.html"></iframe>
-
+<iframe width = "50%" height = "100%" src="index.html"></iframe>
+<iframe width = "50%" height = "100%" src="index.html"></iframe>
 </body>
 </html>
