--- a/singleView.html
+++ b/singleView.html
@@ -21,6 +21,7 @@
         <link rel="stylesheet" href="maincss.css" />
         <link rel="stylesheet" href="app/graphics/Slider.css" />
         <link rel="stylesheet" href="app/graphs.css" />
+        <link rel="stylesheet" href="app/style.css" />
     </head>
     <body>
         <div id= "mainCointainer" class = "flex-container">
