--- a/singleView.html
+++ b/singleView.html
@@ -16,6 +16,7 @@
         <script src="app/graphics/PieChart.js" charset="utf-8"></script>
         <script src="app/graphics/LineChart.js" charset="utf-8"></script>
         <script src="app/graphics/Stars.js" charset="utf-8"></script>
+        <script src="app/graphics/colMap.js" charset="utf-8"></script>
         <script src="app/graphics/WeatherLineChart.js" charset="utf-8"></script>
         <script src="app/graphics/WeatherBox.js" charset="utf-8"></script>
          <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
